# plg-sdk

./: README.md  pyproject.toml
plg_sdk/cli/: init_cmd.py  main.py
plg_sdk/core/: __init__.py  config.py  pep440.py
plg_sdk/modules/: module_cache.py  module_manager.py
plg_sdk/resource/: config_schema.json
tests/: test_owo.py
